--- a/DataPreprocess/Datapreprocess.ipynb
+++ b/DataPreprocess/Datapreprocess.ipynb
@@ -105,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get a vocabulary set that contains uniqe words\n",
-    "txt_files_clean = glob.glob(\"nipstxt/nips12/short_*.txt\")\n",
+    "txt_files_clean = glob.glob(\"nipstxt/nipstoy/short_*.txt\")\n",
     "vocabulary = set()\n",
     "for file in sorted(txt_files_clean):\n",
     "    with open(file, 'rt',encoding = \"ISO-8859-1\") as f:\n",
@@ -124,21 +124,21 @@
     "for key in vocabulary:\n",
     "    wordToIDshort[key] = id\n",
     "    id += 1\n",
-    "with open('wordToIDshort', 'a') as f2:\n",
+    "with open('wordToIDtoy', 'a') as f2:\n",
     "    for key, value in wordToIDshort.items():\n",
     "        f2.write(str(key)+' '+str(value)+'\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14001\n"
+      "3524\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
     "            for word in doc_words:\n",
     "                doc_wordID_short += str(wordToIDshort[word])\n",
     "                doc_wordID_short += ' '\n",
-    "        with open('nipstxt/nips12/'+'doc_wordID_short'+file[-8:-4]+'.txt', 'a') as f2:\n",
+    "        with open('nipstxt/nipstoy/'+'doc_wordID_short'+file[-8:-4]+'.txt', 'a') as f2:\n",
     "            f2.write(doc_wordID_short)  \n",
     "            f2.close()"
    ]
