--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -33,14 +33,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Modeling\n"
+    "### 2.1 Modeling\n",
+    "LDA assumes the words in every documents are exchangeable, and each of which is a multinomial distribution over vocabularies of size $V$. The likelihood of a corpus $\\mathbf{D}$ contains $D$ documents is given as following:  \n",
+    "\\begin{align}\n",
+    "\tp(\\mathbf{D}; \\alpha, \\beta)=p(\\theta, \\beta, z, w)&=\\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D} p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}p(z_{dn} | \\theta_{d})p(w_{dn} |z_{dn},\\beta_{z_{dn}})\\\\\n",
+    "\t&= \\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D}p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}\\theta_{z_{dn}}f(w_{dn};b_{z_{dn}}))\n",
+    "\\end{align}\n",
+    "\n",
+    "**LDA generative process: ** \n",
+    "1. For each topic $k \\in \\{1, 2, ..., K\\}$, draw $\\beta_{k} \\sim Dirichlet(\\eta)$  \n",
+    "2. For each document $d \\in \\{1, 2, ...,D\\}$:  \n",
+    "    a) Draw $\\theta_{d} \\sim Dirichlet (\\alpha)$  \n",
+    "    b) For each word $w_{n}$, $n \\in \\{1, 2, ..., N_{d}\\}$ in document $d$:  \n",
+    "    * Draw $z_{dn} \\sim Categorical(\\theta_{d})$.  \n",
+    "    * Generaste word $w_{dn}\\sim p(w_{dn} | z_{dn}, \\beta_{z_{dn}})$, a categorical probability conditioned on the topic $z_{dn}$.  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"LDABlei.jpg\">"
+    "<img src=\"LDABlei.jpg\" width=\"600\"/>"
    ]
   },
   {
