--- a/DataPreprocess/Datapreprocess.ipynb
+++ b/DataPreprocess/Datapreprocess.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "## Clean words in each document\n",
-    "txt_files = glob.glob(\"nips1y/*.txt\")\n",
+    "txt_files = glob.glob(\"nipstxt/nipstoy20/*.txt\")\n",
     "# txt_files = glob.glob(\"nips08/*.txt\")\n",
     "for file in sorted(txt_files):\n",
     "    doc = []\n",
@@ -170,13 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fad7619bbbb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# txt_files_short= glob.glob(\"nipstxt/nipstoy50/short_*.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# txt_files_short= glob.glob(\"nipstxt/nipstoy20/short_*.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtxt_files_short\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nipstxt/nipstoy20/*.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mvocabulary_short\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtxt_files_short\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# txt_files_short= glob.glob(\"nipstxt/nipstoy50/short_*.txt\")\n",
     "# txt_files_short= glob.glob(\"nipstxt/nipstoy20/short_*.txt\")\n",
-    "txt_files_short= glob.glob(\"nipstxt/nips12/short_*.txt\")\n",
+    "txt_files_short= glob.glob(\"nipstxt/nipstoy20/*.txt\")\n",
     "vocabulary_short = set()\n",
     "for file in sorted(txt_files_short):\n",
     "    with open(file, 'rt',encoding = \"ISO-8859-1\") as f:\n",
@@ -191,7 +203,7 @@
     "    wordToID_short[key] = id\n",
     "    id += 1\n",
     "# with open('wordToID_short_50', 'a') as f2:\n",
-    "with open('wordToID_short_12.txt', 'a') as f2:\n",
+    "with open('wordToID_short_12_20.txt', 'a') as f2:\n",
     "    for key, value in wordToID_short.items():\n",
     "        f2.write(str(key)+' '+str(value)+'\\n')\n"
    ]
