--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -20,7 +20,9 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import edward as ed"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,9 +103,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "probrequire",
    "language": "python",
-   "name": "python3"
+   "name": "pprequire"
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
