--- a/DataPreprocess/Datapreprocess.ipynb
+++ b/DataPreprocess/Datapreprocess.ipynb
@@ -170,21 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'glob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-fad7619bbbb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# txt_files_short= glob.glob(\"nipstxt/nipstoy50/short_*.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# txt_files_short= glob.glob(\"nipstxt/nipstoy20/short_*.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtxt_files_short\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nipstxt/nipstoy20/*.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mvocabulary_short\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtxt_files_short\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# txt_files_short= glob.glob(\"nipstxt/nipstoy50/short_*.txt\")\n",
     "# txt_files_short= glob.glob(\"nipstxt/nipstoy20/short_*.txt\")\n",
@@ -210,16 +198,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "632"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocabulary_short)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +231,7 @@
     "            for word in doc_words:\n",
     "                doc_wordID_short += str(wordToID_short[word])\n",
     "                doc_wordID_short += ' '\n",
-    "        with open('nipstxt/nips12/'+'doc_short_wID_12_'+file[-8:-4]+'.txt', 'a') as f2:\n",
+    "        with open('nipstxt/nipstoy20/'+'doc_short_wID_12_'+file[-8:-4]+'.txt', 'a') as f2:\n",
     "            f2.write(doc_wordID_short)  \n",
     "            f2.close()"
    ]
