--- a/DataPreprocess/Datapreprocess.ipynb
+++ b/DataPreprocess/Datapreprocess.ipynb
@@ -2,25 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bs4 as bs\n",
-    "import nltk\n",
-    "from nltk.tokenize import sent_tokenize\n",
+    "# import bs4 as bs\n",
+    "# import nltk\n",
+    "# from nltk.tokenize import sent_tokenize\n",
+    "# import re\n",
+    "# from nltk.stem import PorterStemmer\n",
+    "# from nltk.tag import pos_tag\n",
+    "# from nltk.corpus import stopwords\n",
+    "# from nltk.corpus import wordnet\n",
+    "# from nltk.stem import WordNetLemmatizer\n",
+    "# import glob   \n",
     "import re\n",
     "from nltk.stem import PorterStemmer\n",
-    "from nltk.tag import pos_tag\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.corpus import wordnet\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "import glob   "
+    "import glob "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
