--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
     "import pickle\n",
     "import time\n",
     "\n",
-    "if '../src' not in sys.path:\n",
-    "    sys.path.append('../src')\n",
+    "if '../' not in sys.path:\n",
+    "    sys.path.append('../')\n",
     "\n",
-    "from lda import LDA\n",
-    "from lda import GaussianLDA\n"
+    "from models.lda import LDA\n",
+    "from models.lda import GaussianLDA\n"
    ]
   },
   {
@@ -127,9 +127,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of documents, D: 20\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0024.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0031.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0136.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0122.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0080.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0096.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0108.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0045.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0052.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0103.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0089.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0129.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0115.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0059.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0066.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0073.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0017.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0003.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0010.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0038.txtfinished\n",
+      "vocab size is 632\n",
+      "load wordToI finished\n"
+     ]
+    }
+   ],
    "source": [
     "datafile = \"../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_*.txt\"\n",
     "txt_files = glob.glob(datafile)\n",
@@ -283,9 +313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "probrequire",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pprequire"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
