--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -84,7 +84,7 @@
     "### 2.2 Collapsed Gibbs Sampling Inference for LDA (MCMC) \n",
     "\n",
     "We planned to implement the **Black Box variational inference** method (klqp method) in Edward at the very beginning, however if we include all parameters $\\theta$, $z$, and $\\beta$ for the posterior inference, the result cannot converge. Because KLqp has poor performance at approximating the Dirichlet distribution, especially if we have full-rank covariances for the mixture components. This problem is partially due to the high variance in the vanilla version of BBVI.  \n",
-    "In addition, because of the slow convergence of **Gibbs Sampling** inference of LDA, we implemented the **Collapsed Gibbs Sampling** Inference instead [Das et al. (2015)](http://www.aclweb.org/anthology/P15-1077). Since we are only interested in the posterior distribution over the assignment of words in $k$ topics, we are able to not explicitly express the posterior estimation of $\\theta$ and $\\beta$.   \n",
+    "In addition, because of the slow convergence of **Gibbs Sampling** inference of LDA, we implemented the **Collapsed Gibbs Sampling** Inference instead [Griffiths et al. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf). Since we are only interested in the posterior distribution over the assignment of words in $k$ topics, we are able to not explicitly express the posterior estimation of $\\theta$ and $\\beta$.   \n",
     "In Monte Carlo Markov Chain, we construct a Markov chain on latent variables which converges to a stationary distribution. This would be used for the estimation of the posterior distribution. In order to draw sample at the time t, we need to construct the complete conditional distribution of latent variables, $p(z_{d,i}|\\mathbf{z}_{d,-i}, \\mathbf{w})$ in this algorithm. Taking the advantage of the conjugate conditional family, the probability distribution can be expressed as: \n",
     "\\begin{align}\n",
     " \tp(z_{i}=j|\\mathbf{z}_{d,-i}, \\mathbf{w}) & \\propto \\frac{n_{d,-i,j}^{(w_{d,i}) }+ \\eta}{n_{d,-i,j}^{(.)} + V\\eta} \\frac{n_{d,-i,j}^{(d)}+\\alpha}{n_{d,-i,.}^{(d)}+k\\alpha}\n",
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Modeling\n",
+    "### 3.1 Modeling  [Das et al. (2015)](http://www.aclweb.org/anthology/P15-1077) \n",
     "Instead of generating words from categorical distribution, Gaussian LDA integrates the word embedding that aims at capturing more semantic regularities in language and generates words from multivariate Gaussian distributions. The observed words input are pre-trained word2vec embedding vectors with fixed dimensions [gensim](https://radimrehurek.com/gensim/models/word2vec.html). Our model used 25 dimensional word embeddings instead of the pre-defined 100 dimension due to the feasibility and running time while implementing on Edward.  \n",
     "The likelihood of a corpus $\\mathbf{D}$ contains $D$ documents is given as following:\n",
     "\\begin{align}\n",
@@ -375,6 +375,17 @@
    "metadata": {},
    "source": [
     "<img src=\"GLDA50.jpg\" width=\"950\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *References*\n",
+    "* [Blei, D. M., Ng, A. Y., and Jordan, M. I. (2003).](http://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf) Latent dirichlet allocation. Journal of machine Learning research, 3(Jan):993–1022. \n",
+    "* [Bouma, G. (2009).](https://svn.spraakdata.gu.se/repos/gerlof/pub/www/Docs/npmi-pfd.pdf) Normalized (pointwise) mutual information in collocation extraction. Proceedings of GSCL, 31-40.\n",
+    "* [Das, R., Zaheer, M., and Dyer, C. (2015).](http://www.aclweb.org/anthology/P15-1077) Gaussian lda for topic models with word embeddings. In Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers), volume 1, pages 795–804.\n",
+    "* [Griffiths, T. L., & Steyvers, M. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf) Finding scientific topics. Proceedings of the National academy of Sciences, 101(suppl 1), 5228-5235.\n"
    ]
   },
   {
