--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -350,8 +350,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Criticism for Gaussian LDA\n",
-    "The top words for each topic and corresponding pmi is shown in the following chart, and we can see improvement in pmi score and topic words interpretability. "
+    "### 3.3 Criticism for Gaussian LDA \n",
+    "The top words for each topic and corresponding pmi is shown in the following chart. We can see improvement in pmi score as the average pmi changes from 0.203 to 1.58 with more topic interpretability."
    ]
   },
   {
@@ -374,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"GLDA50.jpg\" width=\"950\"/>"
+    "<img src=\"GLDA50v2.jpg\" width=\"950\"/>"
    ]
   },
   {
