--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +161,8 @@
     "\n",
     "N = [0] * D  # words per doc\n",
     "K = 9  # number of topics\n",
-    "T = 300 # samples drawn in the burnin period\n",
-    "S = 200 # samples collected for collapsed gibbs sampling\n",
+    "T = 50 # samples drawn in the burnin period\n",
+    "S = 100 # samples collected for collapsed gibbs sampling\n",
     "\n",
     "wordIds = [None] * D\n",
     "count = 0  # count number of documents\n",
@@ -203,9 +203,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model constructed\n",
+      "burnin: 0\n",
+      "burnin: 1\n",
+      "burnin: 2\n",
+      "burnin: 3\n",
+      "burnin: 4\n",
+      "burnin: 5\n",
+      "burnin: 6\n",
+      "burnin: 7\n",
+      "burnin: 8\n",
+      "burnin: 9\n",
+      "burnin: 10\n",
+      "burnin: 11\n",
+      "burnin: 12\n",
+      "burnin: 13\n",
+      "burnin: 14\n",
+      "burnin: 15\n",
+      "burnin: 16\n",
+      "burnin: 17\n",
+      "burnin: 18\n",
+      "burnin: 19\n",
+      "burnin: 20\n",
+      "burnin: 21\n",
+      "burnin: 22\n",
+      "burnin: 23\n",
+      "burnin: 24\n",
+      "burnin: 25\n",
+      "burnin: 26\n",
+      "burnin: 27\n",
+      "burnin: 28\n",
+      "burnin: 29\n",
+      "burnin: 30\n",
+      "burnin: 31\n",
+      "burnin: 32\n",
+      "burnin: 33\n",
+      "burnin: 34\n",
+      "burnin: 35\n",
+      "burnin: 36\n",
+      "burnin: 37\n",
+      "burnin: 38\n",
+      "burnin: 39\n",
+      "burnin: 40\n",
+      "burnin: 41\n",
+      "burnin: 42\n",
+      "burnin: 43\n",
+      "burnin: 44\n",
+      "burnin: 45\n",
+      "burnin: 46\n",
+      "burnin: 47\n",
+      "burnin: 48\n",
+      "burnin: 49\n",
+      "sample: 0\n",
+      "sample: 1\n",
+      "sample: 2\n",
+      "sample: 3\n",
+      "sample: 4\n",
+      "sample: 5\n",
+      "sample: 6\n",
+      "sample: 7\n",
+      "sample: 8\n",
+      "sample: 9\n",
+      "sample: 10\n",
+      "sample: 11\n",
+      "sample: 12\n",
+      "sample: 13\n",
+      "sample: 14\n",
+      "sample: 15\n",
+      "sample: 16\n",
+      "sample: 17\n",
+      "sample: 18\n",
+      "sample: 19\n",
+      "sample: 20\n",
+      "sample: 21\n",
+      "sample: 22\n",
+      "sample: 23\n",
+      "sample: 24\n",
+      "sample: 25\n",
+      "sample: 26\n",
+      "sample: 27\n",
+      "sample: 28\n",
+      "sample: 29\n",
+      "sample: 30\n",
+      "sample: 31\n",
+      "sample: 32\n",
+      "sample: 33\n",
+      "sample: 34\n",
+      "sample: 35\n",
+      "sample: 36\n",
+      "sample: 37\n",
+      "sample: 38\n",
+      "sample: 39\n",
+      "sample: 40\n",
+      "sample: 41\n",
+      "sample: 42\n",
+      "sample: 43\n",
+      "sample: 44\n",
+      "sample: 45\n",
+      "sample: 46\n",
+      "sample: 47\n",
+      "sample: 48\n",
+      "sample: 49\n",
+      "sample: 50\n",
+      "sample: 51\n",
+      "sample: 52\n",
+      "sample: 53\n",
+      "sample: 54\n",
+      "sample: 55\n",
+      "sample: 56\n",
+      "sample: 57\n",
+      "sample: 58\n",
+      "sample: 59\n",
+      "sample: 60\n",
+      "sample: 61\n",
+      "sample: 62\n",
+      "sample: 63\n",
+      "sample: 64\n",
+      "sample: 65\n",
+      "sample: 66\n",
+      "sample: 67\n",
+      "sample: 68\n",
+      "sample: 69\n",
+      "sample: 70\n",
+      "sample: 71\n",
+      "sample: 72\n",
+      "sample: 73\n",
+      "sample: 74\n",
+      "sample: 75\n",
+      "sample: 76\n",
+      "sample: 77\n",
+      "sample: 78\n",
+      "sample: 79\n",
+      "sample: 80\n",
+      "sample: 81\n",
+      "sample: 82\n",
+      "sample: 83\n",
+      "sample: 84\n",
+      "sample: 85\n",
+      "sample: 86\n",
+      "sample: 87\n",
+      "sample: 88\n",
+      "sample: 89\n",
+      "sample: 90\n",
+      "sample: 91\n",
+      "sample: 92\n",
+      "sample: 93\n",
+      "sample: 94\n",
+      "sample: 95\n",
+      "sample: 96\n",
+      "sample: 97\n",
+      "sample: 98\n",
+      "sample: 99\n"
+     ]
+    }
+   ],
    "source": [
     "model = LDA(K, V, D, N)\n",
     "print(\"model constructed\")\n",
@@ -214,9 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 't1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-2a62f8078bc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTopWords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwordVec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"get top words finished\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcomatrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DataPreprocess/comatrix1y.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 't1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(time.time() - t1)\n",
     "model.getTopWords(wordVec, tokens)\n",
@@ -387,13 +557,6 @@
     "* [Das, R., Zaheer, M., and Dyer, C. (2015).](http://www.aclweb.org/anthology/P15-1077) Gaussian lda for topic models with word embeddings. In Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers), volume 1, pages 795–804.\n",
     "* [Griffiths, T. L., & Steyvers, M. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf) Finding scientific topics. Proceedings of the National academy of Sciences, 101(suppl 1), 5228-5235.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
