--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -10,14 +10,14 @@
     "*Columbia University*\n",
     "## 1. Introduction\n",
     "**GOAL**  \n",
-    "The goal in modeling a large corpus of discrete documents is to find the latent clustering pattern of those documents as we assume that each document has a probability distribution over certain number of topics, and the words in each documents are drawn from documents‘ topic distribution. It is hard because we are not sure about the word distribution whether they are discrete or continuous, nor do we have any information about the number of topics in many cases.  \n",
+    "The goal in modeling a large corpus of discrete documents is to find the latent clustering pattern of those documents as we assume that each document has a probability distribution over certain number of topics, and the words in each documents are drawn from documents' topic distribution. It is hard because we are not sure about the word distribution whether they are discrete or continuous, nor do we have any information about the number of topics in many cases.  \n",
     "**DATA**  \n",
-    "To solve topic clustering problem we access NIPS corpus data NIPS12."
+    "To solve topic clustering problem we access [NIPS](https://cs.nyu.edu/~roweis/data.html) corpus data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,20 +83,20 @@
    "source": [
     "### 2.2 Collapsed Gibbs Sampling Inference for LDA (MCMC) \n",
     "\n",
-    "We planned to implement the **Black Box variational inference** method (klqp method) in Edward at the very beginning, however if we include all parameters $\\theta$, $z$, and $\\beta$ for the posterior inference, the result cannot converge. Because KLqp has poor performance at approximating the Dirichlet distribution, especially if we have full-rank covariances for the mixture components. This problem is partially due to the high variance in the vanilla version of BBVI.  \n",
-    "In addition, because of the slow convergence of **Gibbs Sampling** inference of LDA, we implemented the **Collapsed Gibbs Sampling** Inference instead [Griffiths et al. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf). Since we are only interested in the posterior distribution over the assignment of words in $k$ topics, we are able to not explicitly express the posterior estimation of $\\theta$ and $\\beta$.   \n",
+    "We planned to implement the **Black Box variational inference** method (klqp method) in Edward at the very beginning, however if we include all parameters $\\theta$, $z$, and $\\beta$ for the posterior inference, the result cannot converge. Because klqp in Edward has poor performance at approximating the Dirichlet distribution, especially if we have full-rank covariances for the mixture components. This problem is partially due to the high variance in stochastic optimization if only implementing the vanilla version of BBVI.  \n",
+    "In addition, because of the slow convergence of **Gibbs Sampling** inference of LDA, we implemented the **Collapsed Gibbs Sampling** Inference instead [Griffiths et al. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf). Since we are only interested in the posterior distribution over the assignment of words in $k$ topics respectively, $p(\\mathbf{z}|\\mathbf{w})$, we can have inexplicit expression of the posterior estimation of $\\theta$ and $\\beta$.   \n",
     "In Monte Carlo Markov Chain, we construct a Markov chain on latent variables which converges to a stationary distribution. This would be used for the estimation of the posterior distribution. In order to draw sample at the time t, we need to construct the complete conditional distribution of latent variables, $p(z_{d,i}|\\mathbf{z}_{d,-i}, \\mathbf{w})$ in this algorithm. Taking the advantage of the conjugate conditional family, the probability distribution can be expressed as: \n",
     "\\begin{align}\n",
-    " \tp(z_{i}=j|\\mathbf{z}_{d,-i}, \\mathbf{w}) & \\propto \\frac{n_{d,-i,j}^{(w_{d,i}) }+ \\eta}{n_{d,-i,j}^{(.)} + V\\eta} \\frac{n_{d,-i,j}^{(d)}+\\alpha}{n_{d,-i,.}^{(d)}+k\\alpha}\n",
+    " \tp(z_{d,i}=j|\\mathbf{z}_{d,-i}, \\mathbf{w}) & \\propto \\frac{n_{-i,j}^{(w_{d,i}) }+ \\eta}{n_{-i,j}^{(.)} + V\\eta} \\frac{n_{-i,j}^{(d)}+\\alpha}{n_{-i,.}^{(d)}+k\\alpha}\n",
     "\\end{align}\n",
     "The first fraction express the probability of $w_{d,i}$ under topic $j$, and the second term expresses the probability of topic $j$ document $d_{i}$. The notations are defined as follows:\n",
-    "* $n_{d, -i,j}^{(w_{i})}$ is the number of times this $i^{th}$ observed word is assigned to topic $j$ while not including the current assignment $z_{d,i}$ in document $d$.  \n",
-    "* $n_{d, -i,j}^{(.)}$ is the number of times a word from document $d$ is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
-    "* $n_{d, -i,j}^{(d)}$ is the number of times a word from document $d$ is assigned to topic $j$ while not including the current assignment $z_{d, i}$.\n",
-    "* $n_{d, -i,.}^{(d)}$ is the number words in document $d$ while not including the current assignment $z_{d, i}$.\n",
+    "* $n_{-i,j}^{(w_{d,i})}$ is the number of times this $i^{th}$ observed word in document $d$ is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
+    "* $n_{-i,j}^{(.)}$ is the number of times any word is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
+    "* $n_{-i,j}^{(d)}$ is the number of times a word from document $d$ is assigned to topic $j$ while not including the current assignment $z_{d, i}$.\n",
+    "* $n_{-i,.}^{(d)}$ is the number words in document $d$ while not including the current assignment $z_{d, i}$.\n",
     "* $V$ is the vocabulary size, and $k$ is the number of topics defined at the very beginning.  \n",
     "\n",
-    "With the set of samples $(S=200)$ drawn after burn-in period $(T=500)$, we can evaluate $\\theta$ and $\\beta$ by integrating across the full set of samples as follows:\n",
+    "With the set of samples drawn after burn-in period, we can evaluate $\\theta$ and $\\beta$ by integrating across the full set of samples as follows:\n",
     " \\begin{align}\n",
     " \t\\hat{\\beta_{j}^{(w)}} &= \\frac{n_{j}^{(w)} + \\eta}{n_{j}^{(.)}+V\\eta}\\\\\n",
     " \t\\hat{\\theta_{j}^{(d)}} &= \\frac{\\theta_{j}^{(d)} + \\alpha}{n_{.}^{(d)}+k\\alpha}\n",
@@ -132,8 +132,8 @@
     "\n",
     "N = [0] * D  # words per doc\n",
     "K = 9  # number of topics\n",
-    "T = 50 # samples drawn in the burnin period\n",
-    "S = 100 # samples collected for collapsed gibbs sampling\n",
+    "T = 300 # samples drawn in the burnin period\n",
+    "S = 200 # samples collected for collapsed gibbs sampling\n",
     "\n",
     "wordIds = [None] * D\n",
     "count = 0  # count number of documents\n",
@@ -255,7 +255,7 @@
    "metadata": {},
    "source": [
     "### 3.2 Black Box Variational Inference for Gaussian LDA  \n",
-    "Paper [Das et al. (2015)](http://www.aclweb.org/anthology/P15-1077) provides the Collapsed Gibbs Sampling posterior inference method for Gaussian LDA, however Collapsed Gibbs Sampling does not work with mixture random variables. With the blessing of the conjugate priors for topic proportions, we can integrate them out during the inference as we got rid of the Dirichlet distribution in klqp implementation in Edward. The variational distribution for $\\mu$ and $\\Sigma$ are that same distribution as the prior while taking the independence assumption."
+    "Paper [Das et al. (2015)](http://www.aclweb.org/anthology/P15-1077) provides the Collapsed Gibbs Sampling posterior inference method for Gaussian LDA, however Collapsed Gibbs Sampling does not work with mixture random variables in Edward. With the blessing of the conjugate priors for topic proportions, we can integrate them out during the inference as we got rid of the Dirichlet distribution in klqp implementation in Edward. The variational distribution for $\\mu$ and $\\Sigma$ are that same distribution as the prior while taking the independence assumption."
    ]
   },
   {
@@ -442,8 +442,8 @@
     "print(\"number of documents, D: {}\".format(D))\n",
     "N = [0] * D  # words per doc\n",
     "K = 9  # number of topics\n",
-    "T = 20 # burn-in (we set a small number for demo)\n",
-    "S = 10 # sample (we set a small number for demo)\n",
+    "T = 7500 # burn-in\n",
+    "S = 5 # # of sample \n",
     "wordIds = [None] * D\n",
     "count = 0  # count number of documents\n",
     "for file in (txt_files):\n",
@@ -478,7 +478,7 @@
     "        if line[0] in wordToId:\n",
     "            wordVec[wordToId[line[0]]] = list(map(float, line[1:]))\n",
     "print(\"load word embeddings finished\")\n",
-    "D = 2\n",
+    "D = 20\n",
     "\n",
     "model = GaussianLDA(K, D, N, nu)\n",
     "print(\"model constructed\")\n",
